[gd_scene load_steps=13 format=2]

[ext_resource path="res://esfera.png" type="Texture" id=1]
[ext_resource path="res://Esfera.gd" type="Script" id=2]
[ext_resource path="res://VisibilityNotifier2D.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 68.1542

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 540 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 960, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 960, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29, 540 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://joystix.ttf"

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://joystix.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = SubResource( 8 )

[node name="Node2D" type="Node2D"]
position = Vector2( -2, -6 )

[node name="Esfera" type="KinematicBody2D" parent="."]
position = Vector2( 166, 296 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Esfera"]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Esfera"]
z_index = 1
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Esfera"]
position = Vector2( 3, -1 )
script = ExtResource( 3 )

[node name="AreasCollisao" type="Node2D" parent="."]

[node name="esquerda" type="Area2D" parent="AreasCollisao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasCollisao/esquerda"]
position = Vector2( -72, 540 )
shape = SubResource( 2 )

[node name="cima" type="Area2D" parent="AreasCollisao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasCollisao/cima"]
position = Vector2( 960, -40 )
shape = SubResource( 3 )

[node name="baixo" type="Area2D" parent="AreasCollisao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasCollisao/baixo"]
position = Vector2( 960, 1093 )
shape = SubResource( 4 )

[node name="direita" type="Area2D" parent="AreasCollisao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasCollisao/direita"]
position = Vector2( 1952, 540 )
shape = SubResource( 5 )

[node name="HUD" type="Node2D" parent="."]

[node name="Label" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "NÃºmero de vidas:"

[node name="gameOver" type="Label" parent="HUD"]
margin_left = 600.0
margin_top = 500.0
margin_right = 56.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )

[node name="pontos" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 50.0
margin_right = 56.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Pontos:"

[node name="RetanguloEsquerdo" type="Polygon2D" parent="."]
position = Vector2( 72, 64 )
scale = Vector2( -0.04, 1 )
color = Color( 0.00784314, 1, 0, 0.0862745 )
polygon = PoolVector2Array( -200, -64, -200, 472, -200, 1016, 1800, 1016, 1800, 552, 1800, 504, 1800, -64, 1000, -64 )

[node name="RetanguloDireita" type="Polygon2D" parent="."]
position = Vector2( 1920, 64 )
scale = Vector2( -0.04, 1 )
color = Color( 0.00784314, 1, 0, 0.0862745 )
polygon = PoolVector2Array( 0, -64, 0, 238.292, 0, 1016, 2000, 1016, 2000, 704, 2000, 400, 2000, -64, 800, -64 )

[node name="RetanguloCima" type="Polygon2D" parent="."]
position = Vector2( 1756.15, 72.63 )
rotation = 1.5708
scale = Vector2( -0.04035, 0.972585 )
color = Color( 0.00784314, 1, 0, 0.0862745 )
polygon = PoolVector2Array( -182.652, -86.2173, -182.653, 259.254, -182.654, 1723.39, 808.672, 1723.39, 1800, 1723.39, 1800, 818.588, 1800, 504, 1800, -86.2173, 808.674, -86.2173 )

[node name="RetanguloBaixo" type="Polygon2D" parent="."]
position = Vector2( 1752, 1088 )
rotation = 1.5708
scale = Vector2( -0.04035, 0.972585 )
color = Color( 0.00784314, 1, 0, 0.0862745 )
polygon = PoolVector2Array( 198.268, -90.4805, 198.268, 263.216, 198.266, 1719.13, 991.328, 1719.13, 1982.65, 1719.13, 1982.66, 855.452, 1982.66, 518.207, 1982.66, -90.4805, 991.33, -90.4805 )

[connection signal="body_entered" from="AreasCollisao/esquerda" to="Esfera" method="_on_esquerda_body_entered"]
[connection signal="body_entered" from="AreasCollisao/cima" to="Esfera" method="_on_cima_body_entered"]
[connection signal="body_entered" from="AreasCollisao/baixo" to="Esfera" method="_on_baixo_body_entered"]
[connection signal="body_entered" from="AreasCollisao/direita" to="Esfera" method="_on_direita_body_entered"]
